# coding

./: .gitignore  .gitmodules  Gemfile  README.md  TODO.md  _config.yml  atom-settings.txt  index.html  index.markdown
!JSLib/: animation.js  collision.js  input.js
!jslib/: cleanConsole.js  matrix.js  ui.js
.github/workflows/: static.yml
AHK/: fish.ahk  one.ahk
AoC/2020/: 1-1.py  1-2.py  10-2.py  2-2.py  4-1.py  5-1.py  6-1.py
AoC/2023/: 1-1.py  1-2.py
C/: depth_first.c  factorial.c  pointerExplanation.c  quick_sort.c  tetris.txt  timing.c
C++/ATourOfCPPSln/: ATourOfCPPSln.sln
C++/LiquidSln/: LiquidSln.sln
C++/MachineLearningSln/: MachineLearningSln.sln  UpgradeLog.htm
Javascript/Lambda/: Lambda Calculus - Implemented.js  Lambda Calculus - explanation.txt  Lambda Calculus - library - Javascript Implementation.txt  LambdaCalculus-YCombinator.js  (+1 more)
PowerShell/: GenerateMiniSite.ps1  SiteGenerated.ps1  SiteTemplate.ps1
Processing/: DistanceGraphing.ggb
Python/: deck.py  fibonacciPrint.py  matplotlib_test.py  mhwDmg.py  probability_test.py  size_rate_time_converter.py  sm_blueprint_finder.py  warframe_chat_reader.py
ahk/: one.ahk.lnk
c/: binary_tree.c  bubble_sort.c  build.bat  build.ps1  cbuild.bat  depth_first.c  factorial.c  fibonnacci.c  find_git.c  http_server.c  linked_list.c  pointer_explanation.c  quick_sort.c  sort.c  timing.c
c/collision/: CMakeLists.txt
c/collision/src/: main.c
c/raylib_test/: CMakeLists.txt
docs/: Gemfile  _config.yml  index.markdown
processing/: Collision help.pub
python/: bad_graph.ipynb  changes_counter.py  deck.py  funky_hash.py  random_linear_classifier.ipynb  test.py
site/: index.css  index.html  index.js
unity/: CollisionHelp.txt
(+1786 files in other folders)
